Added Spnsh CSV refuel system notification to galaxy plotter Adjusted columns in Exobiology Overlay

--- a/ODExplorer/Controls/CartoDetailsControls/CartodataSystemList.xaml
+++ b/ODExplorer/Controls/CartoDetailsControls/CartodataSystemList.xaml
@@ -181,6 +181,13 @@
                           HeadersVisibility="Column"
                           BorderThickness="0"
                           Style="{DynamicResource BaseDataGridStyle}">
+                    <DataGrid.RowStyle>
+                        <Style TargetType="{x:Type DataGridRow}"
+                               BasedOn="{StaticResource CommanderRowStyle}">
+                            <Setter Property="ToolTip"
+                                    Value="{Binding ToolTip}" />
+                        </Style>
+                    </DataGrid.RowStyle>
                     <DataGrid.Columns>
                         <DataGridTextColumn Binding="{Binding BodyID}"
                                             SortMemberPath="BodyID"
