Added an option to hide biology signal below a set value in the exo view Added a semitransparant view for overlays and made the transparant mode click through (Hold shift when the mouse is over the popup to interact with it) Made switching between accounts quicker (it no longer reads the same files again)

--- a/ODExplorer/Controls/DisplaySettingsControl/NotificationSettingsControl.xaml
+++ b/ODExplorer/Controls/DisplaySettingsControl/NotificationSettingsControl.xaml
@@ -155,7 +155,7 @@
                 </Button>
             </StackPanel>
 
-            <TextBlock Text="Duration"
+            <TextBlock Text="Duration (Seconds)"
                        VerticalAlignment="Center"
                        Margin="0,10"
                        Grid.Row="2" />
@@ -179,7 +179,7 @@
                                    Grid.Column="1"
                                    Value="{Binding MaxNotificationCount}" />
 
-            <TextBlock Text="X Offset"
+            <TextBlock Text="X Offset (Pixels)"
                        Margin="0,10"
                        VerticalAlignment="Center"
                        Grid.Row="4" />
@@ -191,7 +191,7 @@
                                    Grid.Column="1"
                                    Value="{Binding XOffset}" />
 
-            <TextBlock Text="Y Offset"
+            <TextBlock Text="Y Offset (Pixels)"
                        Margin="0,10"
                        VerticalAlignment="Center"
                        Grid.Row="5" />
