--- a/ODExplorer/Controls/RouteControls/AdditionalControls/CurrentSystemControl.xaml
+++ b/ODExplorer/Controls/RouteControls/AdditionalControls/CurrentSystemControl.xaml
@@ -123,6 +123,7 @@
 
                 <TextBlock Grid.Column="4"
                            Text="DB"
+                           ToolTip="Discovered Body Count Reported by the D-Scanner"
                            Margin="0,0,2,0"
                            HorizontalAlignment="Center"
                            VerticalAlignment="Center" />
@@ -139,6 +140,7 @@
 
                 <TextBlock Grid.Column="5"
                            Text="KB"
+                           ToolTip="Known Body Count Reported by EDSM"
                            Margin="0,0,2,0"
                            HorizontalAlignment="Center"
                            VerticalAlignment="Center" />
